# social-media-data-modelling

./: .dockerignore  Dockerfile  README.md  dbt_project.yml  packages.yml  profiles.yml  pyproject.toml
macros/: get_custom_schema.sql
models/data_vault/hub/: hub_message.sql  hub_person.sql  hub_thread.sql
models/data_vault/link/: link_message_author.sql  link_message_thread.sql
models/data_vault/prime_stage/: thread.sql  thread_magic_word.sql  thread_message.sql  thread_message_audio_file.sql  thread_message_file.sql  thread_message_gif.sql  thread_message_photo.sql  thread_message_reaction.sql  thread_message_user.sql  thread_message_video.sql  thread_participant.sql
models/data_vault/raw_stage/: raw_thread.sql  raw_thread_magic_word.sql  raw_thread_message.sql  raw_thread_message_audio_file.sql  raw_thread_message_file.sql  raw_thread_message_gif.sql  raw_thread_message_photo.sql  raw_thread_message_reaction.sql  raw_thread_message_user.sql  raw_thread_message_video.sql  raw_thread_participant.sql
models/data_vault/ref/: ref_date.sql
models/data_vault/sat/: sat_message.sql  sat_thread.sql
models/information_mart/dim/: dim1_date.sql  dim1_emoji.sql  dim1_message.sql  dim1_person.sql  dim1_thread.sql
models/information_mart/fact/: fact_message.sql
seeds/data_vault/ref/: ref_emoji.csv
sources/: load.yml
